# imprime-plus

./: .gitignore  CLAUDE.md  LICENSE  README.md  bundle-bg-removal.js  deploy.ps1  package-lock.json  package.json
.claude/: settings.local.json
server/: Dockerfile  app.py  docker-compose.yml  download.html  requirements.txt
src/: index.html
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  main.rs  printing.rs
src/css/: editor.css
src/js/: bg-removal.js  editor.js  engine.js
