[package]
name = "imprime-plus"
version = "1.4.8"
description = "Imprime+ - Editor de impresion de imagenes"
authors = ["UTP Honduras"]
license = "MIT"
homepage = "https://imprime.utp.hn"
repository = "https://github.com/carloslopezhn/imprime-plus"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
