[package]
name = "imprime-plus"
version = "1.9.3"
description = "Imprime+ - Editor de impresion de imagenes"
authors = ["UTP Honduras"]
license = "MIT"
homepage = "https://imprime.utp.hn"
repository = "https://github.com/carloslopezhn/imprime-plus"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
tauri-plugin-dialog = "2.7.0"
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
lzma-rs = "0.3"
sevenz-rust = "0.6"
unrar = "0.5"
